--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         transform: translateX(-50%) translateY(-50%);
         font-size: 250%;
         font-family: 'Times New Roman', Times, serif;
+        text-align: center;
     }
   </style>
 </head>
